# OCCSFrD

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  meson.build  notesOnBuilding.txt  pyproject.toml  setup.py
docs/: Makefile  conf.py  example.ipynb  make.bat
src/occsfrd/: __init__.py
src/occsfrd/ansatz/: __init__.py  closedshellcc.py  normalorderedcc.py  utils.py
src/occsfrd/interface/: __init__.py  inputFile.txt  pyscfoperator.py  storeequations.py  texify.py  zenodoDownloadAndRunTestScript.py  zenodoDownloadTestScript.py
src/occsfrd/reference/: UGA.py  __init__.py
src/occsfrd/solve/: __init__.py  cc.py  diis.py
src/occsfrd/wick/: __init__.py  contractions.py  index.py  operator.py  tensor.py
src/occsfrd/wick/contract/: contract.f90  contract.x  contractSubroutine.pyf
tests/: test_occsfrd.py
