[project]
name = "occsfrd"
version = "0.1.2"
description = "A Python package to derive and implement spin-adapted and spin-free single- and multi-reference coupled cluster methods for open shell molecular electronic structure"
authors = [
    { name="Alexander Gunasekera", email="alexander.gunasekera@gmail.com" },
]
license = "MIT"
license-files = ["LICENSE*"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pyscf",
    "networkx",
    "requests",
]

[project.urls]
Homepage = "https://github.com/AGunasekera/OCCSFrD"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
ext-modules = [
  {name = "occsfrd.wick.contract.contractEXT", sources = ["contractEXT.so", "contract.f90", "contractSubroutine.pyf", "contract.x"]}
]