[project]
name = "occsfrd"
version = "0.1.2"
description = "A Python package to derive and implement spin-adapted and spin-free single- and multi-reference coupled cluster methods for open shell molecular electronic structure"
authors = [
    { name="Alexander Gunasekera", email="alexander.gunasekera@gmail.com" },
]
license = "MIT"
license-files = ["LICENSE*"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pyscf",
    "networkx",
    "requests",
]

[project.urls]
Homepage = "https://github.com/AGunasekera/OCCSFrD"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
ext-modules = [
    {name = "occsfrd.wick.contract.contractEXT", sources = [], extra-objects = ["src/occsfrd/wick/contract/contractEXT.so", "src/occsfrd/wick/contract/contract.f90", "src/occsfrd/wick/contract/contractSubroutine.pyf", "src/occsfrd/wick/contract/contract.x"], optional = true}
    ]

[dependency-groups]
dev = [
    "myst-nb (>=1.4.0,<2.0.0)",
    "sphinx-autoapi (>=3.8.0,<4.0.0)",
    "sphinx-rtd-theme (>=3.1.0,<4.0.0)"
]
